# vehicle_mechanic_agent

./: .env.example  .gitignore  .vercelignore  README.md  charm_manifest.csv  pyproject.toml  render.yaml  requirements.txt  server.py  setup_vehicle_database.py  vercel.json
.git_backup/: FETCH_HEAD  HEAD  config  index
.git_backup/logs/: HEAD
.git_backup/logs/refs/heads/: main  pinecone-approach
.git_backup/logs/refs/remotes/origin/: main  pinecone-approach
.git_backup/objects/bc/: tmp_obj_TF6y9M
.git_backup/refs/heads/: main
api/: query.py
src/auto_mechanic_agent2/: crew.py  ingest_to_pinecone.py  main.py  manuals2.duckdb
src/auto_mechanic_agent2/config/: agents.yaml  tasks.yaml
src/auto_mechanic_agent2/knowledge/: manuals.duckdb  vehicle_knowledge_source.py
src/auto_mechanic_agent2/knowledge/manual_index/: chroma.sqlite3
src/auto_mechanic_agent2/knowledge/manual_index/62dff508-fc0e-4749-a27a-69a448f59a98/: index_metadata.pickle
src/auto_mechanic_agent2/tools/: custom_tool.py
ui/: gradio_ui.py  index.html  package-lock.json  postcss.config.cjs  style.css
ui/src/: App.jsx
